# demand-forecasting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: abs_df.csv  bitre_df.csv  evc_df.csv  nsw_rego_data.csv  vfacts_df.csv  vfacts_sales_df.csv
data/raw/ABS/: 2013-aps-fuel-type-no-state.csv  2014-aps-fuel-type-no-state.csv  2015-aps-fuel-type-no-state.csv  2016-aps-fuel-type-no-state.csv  2017-aps-fuel-type-no-state.csv  2018-aps-fuel-type-no-state.csv  2019-abs-fuel-type-no-state.csv  2020-abs-fuel-type-no-state.csv  2021-abs-fuel-type-no-state.csv  2021-age-by-postcode.csv  2021-distance-to-work-by-postcode.csv  2021-education-by-postcode.csv  2021-personal-income-by-postcode.csv
data/raw/BITRE/: BITRE-Road-Vehicles-Australia-January-2023.xlsx
data/raw/NSW-REGO/: how-to-get-the-nsw-rego-data.ipynb
data/raw/VFACTS/: ACTDEC20.xlsx  ACTDEC21.xlsx  ACTDEC22.xlsx  ACTJUN20.xlsx  ACTJUN21.xlsx  ACTJUN22.xlsx  ACTJUN23.xlsx  (+113 more)
docs/: EVModDevelopmentPlan_v1.docx  SolarBatteryModelCodeExplainer_v1.docx
notebooks/: compare-abs-and-bitre-data.ipynb  compare-vfacts-and-evc-data.ipynb  demographic-scaling.ipynb  ev-demand-forecasting.ipynb  logistic-curve-calibration.ipynb  logistic_functions.py  process-charging-locations-data.ipynb  process-demographic-score-data.ipynb  process_abs_data.ipynb  process_bitre_data.ipynb  process_evc_data.ipynb  process_nsw_rego_data.ipynb  process_vfacts_data.ipynb  visualise_vehicle_data.ipynb  visualise_vfacts_data.ipynb
src/: adoption_model.py
tests/: conftest.py  test_adoption_model.py
(+3 files in other folders)
