[tool.poetry]
name = "demand-forecasting"
version = "0.1.0"
description = "CER Uptake Forecasting Tool"
authors = ["David Green <d.green@csiro.au>"]
readme = "README.md"
packages = [{ include = "adoption_model", from = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
numpy = "^2.0.0"
plotly = "^5.22.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
